--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body class="d-flex flex-column h-100 sidebar-pushcontent" data-sidebarstyle="sidebar-pushcontent">
+  <!-- <script src="https://js.culqi.com/checkout-js"></script> -->
   <!-- sidebar-pushcontent, sidebar-overlay, sidebar-fullscreen  are classes to switch UI here-->
   <app-root class="h-100"></app-root>
 </body>
