--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
   <app-root class="h-100"></app-root>
 </body>
 
-<script type="text/javascript" src="https://checkout.culqi.com/js/v4" id="culqi-checkout-v4" async="" defer=""></script>
-
+<script type="text/javascript" src="https://checkout.culqi.com/js/v4" id="culqi-checkout-v4"></script>
+<script src="https://3ds.culqi.com/" defer></script>
 </html>
