--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,5 @@
 </body>
 
 <script type="text/javascript" src="https://checkout.culqi.com/js/v4" id="culqi-checkout-v4"></script>
-<script src="https://3ds.culqi.com/" defer></script>
+<script src="https://3ds.culqi.com/"></script>
 </html>
